# movai_ign_plugins

./: .gitignore  README.md
.github/workflows/: DeployOnGitRelease.yml  DeployOnMergeMain.yml  TestOnPR.yml  autoupdate.yaml  cmake.yml
MovaiLidar/: CMakeLists.txt  MovaiLidar.cc  MovaiLidar.hh  MovaiLidar_test.cc  requirements.apt
MovaiLidar/debian/: changelog  control  install
MovaiLidar/include/: Containers.hh  MovaiLidar.hh
MovaiLidar/test/: EnvTestFixture.hh  MockSystem.cc  movai_lidar_test.sdf  test_config.hh
battery_station/: BatteryStation.cc  BatteryStation.hh  CMakeLists.txt  README.md  requirements.apt
battery_station/debian/: changelog  control  install
charging_station/: CMakeLists.txt  ChargingStation.cc  ChargingStation.hh  requirements.apt
charging_station/debian/: changelog  control  install  rules
duarte/: CMakeLists.txt  WorldLauncher.qrc
emergency_button/: CMakeLists.txt  EmergencyButton.cc  EmergencyButton.hh  EmergencyButton.qml  EmergencyButton.qrc  README.md
emergency_button/debian/: changelog  install
emissive_property_controller/: CMakeLists.txt  EmissivePropertyController.cc  EmissivePropertyController.hh  EmissivePropertyController.qml  EmissivePropertyController.qrc  README.md  requirements.apt
emissive_property_controller/debian/: changelog  control  install  movai-ign-plugin.prerm
material_controller/: CMakeLists.txt  MaterialController.cc  MaterialController.hh  MaterialController.qml  MaterialController.qrc  README.md  requirements.apt
material_controller/debian/: changelog  control  install
remove_object/: CMakeLists.txt  RemoveObject.cc  RemoveObject.hh
remove_object/debian/: changelog  control  install
spawn_model/: CMakeLists.txt  SpawnModel.cc  SpawnModel.hh
spawn_model/debian/: changelog  control  install
world_launcher/: CMakeLists.txt  README.md  WorldLauncher.cc  WorldLauncher.hh  WorldLauncher.qml  WorldLauncher.qrc  requirements.apt
world_launcher/debian/: changelog  compat  control  install  movai-ign-plugin.prerm  requirements.apt  rules
